fix spacings

--- a/scss/info-ui.scss
+++ b/scss/info-ui.scss
@@ -99,6 +99,7 @@ a {
 
     p {
       line-height: 1.2;
+      font-size: 1.4rem;
       margin-top: 0.8rem;
     }
 
