--- a/scss/info.scss
+++ b/scss/info.scss
@@ -31,7 +31,7 @@ a {
 }
 
 #wrapper {
-  padding: 0 10em;
+  padding: 0 10rem;
 }
 
 .border {
@@ -107,8 +107,9 @@ a {
     order: 3;
 
     p {
-      line-height: 1.4;
-      margin-top: 1.1rem;
+      line-height: 1.2;
+      font-size: 1.4rem;
+      margin-top: 0.8rem;
     }
 
     .project-desc {
